# beanim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: conf.py  examples.rst  genindex.html  index.rst  requirements.txt  search.html
docs/api/: beanim.figures.rst  beanim.graphing_objects.dictionary_graphing_objects.rst  beanim.graphing_objects.html  beanim.graphing_objects.rst  beanim.graphing_objects.table_general.rst  beanim.my_imports.html  beanim.my_imports.rst  beanim.other_objects.photo.rst  beanim.other_objects.post_it.rst  beanim.other_objects.rst  beanim.rst  beanim.templates.collection.blue_ice.rst  beanim.templates.collection.default_template.rst  beanim.templates.collection.fancy_mint.rst  beanim.templates.collection.fire_autumn.rst  beanim.templates.collection.rst  beanim.templates.color_scheme.rst  beanim.templates.html  beanim.templates.rst  beanim.text_and_organisation.blb.html  beanim.text_and_organisation.blb.rst  beanim.text_and_organisation.equation.rst  beanim.text_and_organisation.ref.rst  beanim.text_and_organisation.relevant_functions.rst  beanim.text_and_organisation.rst  beanim.text_and_organisation.text_general.html  beanim.text_and_organisation.text_general.rst  beanim.text_and_organisation.title_presentation.rst  beanim.text_and_organisation.title_section.rst  beanim.tools.rst  manim_beanim.rst  (+11 more)
examples/: example_generic.py  example_generic.py.backup  example_tables_objects.py  example_text_organisation.py  example_tools.py  logo.py  render_all_templates.py  test_simple_scene.py
(+403 files in other folders)
